# nonebot-plugin-anime-downloader

./: README.md  pyproject.toml
nonebot_plugin_anime_downloader/: __init__.py  config.py  data_source.py  models.py  routes.py  tasks.py  test.py  utils.py
nonebot_plugin_anime_downloader/acgrip/: __init__.py
nonebot_plugin_anime_downloader/downloader/: __init__.py  exceptions.py  models.py
nonebot_plugin_anime_downloader/templates/: index.html
